hard-gists/4189391/run.log
=== Docker Run Log for 4189391 ===
Started at: Mi 29. Okt 14:24:31 CET 2025

[2025-10-29 14:24:31] START: Running container for 4189391
[2025-10-29 14:24:31] SUCCESS: Container 37e98b6ac40b8253c2290b87cd9eafdbd9c54361a3b33462650a64a681efed97 started for 4189391
=== Container logs for 4189391 ===
  File "/snippet.py", line 11
    def massageIncomingRegistryValue((obj, objtype), bReturnType=False):
                                     ^^^^^^^^^^^^^^
SyntaxError: Function parameters cannot be parenthesized
=== End of logs for 4189391 ===
[2025-10-29 14:24:33] INFO: Container 37e98b6ac40b8253c2290b87cd9eafdbd9c54361a3b33462650a64a681efed97 has stopped
